kubernetes/orthanc/manifest.yml
#https://book.orthanc-server.com/faq/scalability.html#scalability-memory
---
apiVersion: v1
kind: Service
metadata:
  name: orthanc-web
  namespace: pacsaas-c0100
spec:
  selector:
    app: orthanc
  ports:
    - name: orthanc-web
      protocol: TCP
      port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: orthanc-dicom
  namespace: pacsaas-c0100
spec:
  selector:
    app: orthanc
  ports:
    - name: orthanc-dicom
      protocol: TCP
      port: 4242
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: c0100-orthanc
  namespace: pacsaas-c0100
spec:
  rules:
  - host: c0100-orthanc.curapacs.ch
    http:
      paths:
      - backend:
          serviceName: orthanc-web
          servicePort: orthanc-web
        path: /
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orthanc-deployment
  labels:
    app: orthanc
  namespace: pacsaas-c0100
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orthanc
  template:
    metadata:
      labels:
        app: orthanc
    spec:
      automountServiceAccountToken: false
      containers:
        - name: orthanc
          image: osimis/orthanc:20.3.1
          volumeMounts:
            - name: tz-config
              mountPath: /etc/localtime
      volumes:
        - name: tz-config
          hostPath:
            path: /usr/share/zoneinfo/Europe/Zurich
